# AetherEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  client.ini  editor.ini  imgui.ini
AetherEngine/: CMakeLists.txt
AetherEngine/EngineContent/shaders/: Renderer2D_Batch.glsl  Texture.glsl
AetherEngine/client/: CMakeLists.txt  main.cpp
AetherEngine/editor/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  EditorResources.cpp  EditorResources.h  main.cpp
AetherEngine/editor/commands/: CommandHistory.cpp  CommandHistory.h  DeleteAssetCommand.cpp  DeleteAssetCommand.h  EditorCommand.h
AetherEngine/editor/layers/: EditorLayer.cpp  EditorLayer.h  PerformanceOverlay.cpp  PerformanceOverlay.h  ProjectHubLayer.cpp  ProjectHubLayer.h
AetherEngine/editor/panels/: AssetEditorPanel.cpp  AssetEditorPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorPanel.h  FileBrowser.cpp  FileBrowser.h  InspectorPanel.cpp  InspectorPanel.h  NetworkSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TextureViewerPanel.cpp  TextureViewerPanel.h
AetherEngine/engine/: CMakeLists.txt
AetherEngine/engine/asset/: AssetLibrary.cpp  AssetLibrary.h  AssetLibrarySerializer.cpp  AssetLibrarySerializer.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  CMakeLists.txt
AetherEngine/engine/core/: AetherTime.cpp  AetherTime.h  CMakeLists.txt  Config.cpp  Config.h  ConfigValidator.h  Engine.cpp  Engine.h  EngineVersion.cpp  EngineVersion.h  Log.cpp  Log.h  Theme.cpp  Theme.h  UUID.cpp  UUID.h  VFS.cpp  VFS.h
AetherEngine/engine/core/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
AetherEngine/engine/core/systems/: CMakeLists.txt  InputSystem.h  ReplicationSystem.h  System.h  SystemRegistry.h  SystemScheduler.h
AetherEngine/engine/ecs/: CMakeLists.txt  Components.h  Entity.h  Registry.h
AetherEngine/engine/events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
AetherEngine/engine/input/: CMakeLists.txt  Input.h  InputActions.h  InputMappingContext.h  KeyCodes.h
AetherEngine/engine/network/: CMakeLists.txt  ClientRuntime.h  ClientSnapshotBuffer.h  InterestManager.h  NetworkTransport.h  NetworkTypes.h  SessionManager.h  SessionTypes.h  UdpTransport.cpp  UdpTransport.h
AetherEngine/engine/persistence/: Database.h
AetherEngine/engine/platform/: CMakeLists.txt  SDLInput.cpp  SDLWindow.cpp  SDLWindow.h  Window.h
AetherEngine/engine/project/: CMakeLists.txt  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
AetherEngine/engine/renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  CameraUtils.h  Framebuffer.cpp  Framebuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
AetherEngine/engine/scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  World.cpp  World.h
AetherEngine/enginecontent/: CMakeLists.txt
AetherEngine/enginecontent/shaders/: FlatColor.glsl
AetherEngine/server/: CMakeLists.txt  main.cpp
assets/: Level1.json  boot.json
